--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
