--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "houseOfDev",
+  "name": "house_of_dev",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,6 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
-    "bulma": "^0.9.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
