--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "antd": "^5.0.4",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
-    "bootstrap": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "flowbite": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
